# odyssey-hackathon

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  FEATURES_SUMMARY.md  MIGRATION_COMPLETE.md  README.md  RUNNING.md  SEARCH_SUGGESTIONS.md  THEME_COMPARISON.md  THEME_GUIDE.md  USAGE_GUIDE.md  environment.yml  fetch_lyrics.py  generate_music_video.py  generate_single_video.py  lyrics_to_image.py  pyproject.toml  requirements.txt  test_nano_banana.py  test_odyssey_api.py
.cursor/rules/: documentation-location.mdc
.github/workflows/: deploy.yml
backend/: db.sqlite3  manage.py  start_server.sh
backend/odyssey_web/: asgi.py  settings.py  urls.py  wsgi.py
backend/video_generator/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/video_generator/migrations/: 0001_initial.py  0002_videojob_cancelled_alter_videojob_status.py  0003_videojob_segments.py
backend/video_generator/static/video_generator/css/: style.css
backend/video_generator/static/video_generator/js/: app.js
backend/video_generator/templates/video_generator/: about.html  base.html  index.html  job_list_partial.html
backend/video_generator/utils/: fetch_lyrics.py  generate_music_video.py  lyrics_to_image.py  sentiment_analysis.py
docs/: CANCEL_FEATURE.md  DARK_MODE.md  DARK_MODE_SUMMARY.md  QUICK_REFERENCE.md  WORKFLOW_UPDATE.md
scripts/: create_venv.sh
