[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odyssey-hackathon"
version = "0.1.0"
description = "Odyssey Hackathon project"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Your Name" } ]

# Example dependencies - edit to match your project's needs.
dependencies = [
  "fastapi==0.100.0",
  "uvicorn[standard]==0.23.0",
  "requests>=2.31.0",
  "pytest>=7.4.0",
  "odyssey @ git+https://github.com/odysseyml/odyssey-python.git",
  "google-genai",
  "Pillow",
  "python-dotenv",
]

[tool.setuptools]
packages = { find = {} }
